Error Mitigation/MagiCoder/Data/javax_annotation_processing/javax_annotation_processingOutputResult.txt
Sample: AbstractProcessor_1
----------------------------------------------------------------
================================================================

Sample: AbstractProcessor_2
----------------------------------------------------------------
output:
./Data/javax_annotation_processing/javaFiles/AbstractProcessor_2.java:9: error: class MyProcessor is public, should be declared in a file named MyProcessor.java
public class MyProcessor extends AbstractProcessor {
       ^
1 error


================================================================

Sample: AbstractProcessor_3
----------------------------------------------------------------
output:
./Data/javax_annotation_processing/javaFiles/AbstractProcessor_3.java:7: error: <anonymous AbstractProcessor_3$1> is not abstract and does not override abstract method process(Set<? extends TypeElement>,RoundEnvironment) in AbstractProcessor
        AbstractProcessor processor = new AbstractProcessor() {
                                                              ^
1 error


================================================================

Sample: AbstractProcessor_4
----------------------------------------------------------------
================================================================

Sample: AbstractProcessor_5
----------------------------------------------------------------
output:
./Data/javax_annotation_processing/javaFiles/AbstractProcessor_5.java:9: error: class MyProcessor is public, should be declared in a file named MyProcessor.java
public class MyProcessor extends AbstractProcessor {
       ^
1 error


================================================================

Sample: AbstractProcessor_6
----------------------------------------------------------------
output:
./Data/javax_annotation_processing/javaFiles/AbstractProcessor_6.java:7: error: <anonymous AbstractProcessor_6$1> is not abstract and does not override abstract method process(Set<? extends TypeElement>,RoundEnvironment) in AbstractProcessor
        AbstractProcessor processor = new AbstractProcessor() {
                                                              ^
1 error


================================================================

Sample: AbstractProcessor_7
----------------------------------------------------------------
================================================================

Sample: AbstractProcessor_8
----------------------------------------------------------------
output:
./Data/javax_annotation_processing/javaFiles/AbstractProcessor_8.java:9: error: class MyProcessor is public, should be declared in a file named MyProcessor.java
public class MyProcessor extends AbstractProcessor {
       ^
1 error


================================================================

Sample: AbstractProcessor_9
----------------------------------------------------------------
output:
./Data/javax_annotation_processing/javaFiles/AbstractProcessor_9.java:7: error: <anonymous AbstractProcessor_9$1> is not abstract and does not override abstract method process(Set<? extends TypeElement>,RoundEnvironment) in AbstractProcessor
        AbstractProcessor processor = new AbstractProcessor() {
                                                              ^
1 error


================================================================

Sample: AbstractProcessor_10
----------------------------------------------------------------
================================================================

